# guacamole-user-sync

./: .gitignore  Dockerfile  README.md  data.json  entrypoint.sh  pyproject.toml  run.sh  synchronise.py
.github/workflows/: lint_code.yaml  publish_docker.yaml  test_code.yaml
guacamole_user_sync/: __init__.py  ldap_client.py
guacamole_user_sync/ldap/: __init__.py  ldap_client.py
guacamole_user_sync/models/: __init__.py  exceptions.py  guacamole.py  ldap_objects.py  ldap_query.py  ldap_user.py
guacamole_user_sync/postgresql/: __init__.py  guacamole_schema.1.5.5.sql  orm.py  postgresql_backend.py  postgresql_client.py  schema.py  sql.py
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_6e5178f453529456___init___py.html  z_6e5178f453529456_exceptions_py.html  z_6e5178f453529456_guacamole_py.html  z_6e5178f453529456_ldap_objects_py.html  z_6e5178f453529456_ldap_query_py.html  z_73b3ec21a354d151___init___py.html  z_73b3ec21a354d151_orm_py.html  z_73b3ec21a354d151_postgresql_backend_py.html  z_73b3ec21a354d151_postgresql_client_py.html  z_73b3ec21a354d151_sql_py.html  z_96aa13b9689aadc1___init___py.html  z_96aa13b9689aadc1_ldap_client_py.html  z_c3a9f35c715276d9___about___py.html  z_c3a9f35c715276d9___init___py.html
resources/: init_db.sql  update_users.sql
scripts/: expand_init_db.rb  expand_pg_ldap_sync.rb  expand_psql.rb  expand_update_users.rb
synchronise/: run
templates/: init_db.mustache.sql  pg_ldap_sync.mustache.yaml  psql.mustache.sh  update_users.mustache.sql
tests/: __init__.py  common.bash  conftest.py  mocks.py  test_about.py  test_expand_pg_ldap_sync.bats  test_expand_psql.bats  test_ldap.py  test_postgresql.py
