[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "guacamole-user-sync"
dynamic = ["version"]
description = "Synchronise a Guacamole PostgreSQL database with an LDAP server, such as Microsoft Active Directory"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
keywords = []
authors = [
  { name = "James Robinson", email = "james.em.robinson@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "python-ldap==3.4.4",
]

[project.urls]
Documentation = "https://github.com/alan-turing-institute/guacamole-user-sync#readme"
Issues = "https://github.com/alan-turing-institute/guacamole-user-sync/issues"
Source = "https://github.com/alan-turing-institute/guacamole-user-sync"

[project.optional-dependencies]
lint = [
  "black==24.8.0",
  "mypy==1.11.2",
  "ruff==0.6.2",
]
test = [
  "coverage==7.6.1",
  "pytest==8.3.2",
]

[tool.hatch.version]
path = "guacamole_user_sync/__about__.py"

[tool.hatch.envs.lint]
detached = true
features = ["lint"]

[tool.hatch.envs.lint.scripts]
all = [
  "fmt",
  "style",
  "typing",
]
fmt = [
  "black {args:guacamole_user_sync tests synchronise.py}",
  "ruff check --fix {args:guacamole_user_sync tests synchronise.py}",
]
style = [
  "ruff check {args:guacamole_user_sync tests synchronise.py}",
  "black --check --diff {args:guacamole_user_sync tests synchronise.py}",
]
typing = "mypy {args:guacamole_user_sync tests synchronise.py}"

[tool.hatch.envs.test]
features = ["test"]

[tool.hatch.envs.test.scripts]
all = ["python"]
python = "coverage run -m pytest {args: tests}"

[tool.mypy]
strict = true                     # enable all optional error checking flags

[[tool.mypy.overrides]]
module = [
    "ldap.*",
]
ignore_missing_imports = true
